    - Wolof updated. Closes: #400079

  [ Joey Hess ]
  * Add hpijs to print server task.
  * Add iceweasel to desktop task is it conflicts/replaces firefox.
    Closes: #400154
    Left firefox in there for the transition.
  * Remove gimp-print from print server task, since it's only a gimp printing
    plugin. It remains in the desktop task, which includes the gimp.
    Closes: #400251

  [ Christian Perrier ]
  * Portuguese task additions. Closes: #400317, #400542
    - Replace old apsell-pt by aspell-pt-pt
    - Add iportuguese, wportuguese and myspell-pt-pt

 -- Christian Perrier <bubulle@kheops.perrier.eu.org>  Mon, 27 Nov 2006 08:14:34 +0100

tasksel (2.58) unstable; urgency=low

  [ Translations of tasks - alphabet ical order ]
    - Albanian updated.
    - Arabic updated.
    - Basque updated.
    - Bengali updated.
    - Brazilian Portuguese updated.
    - Catalan updated.
    - Chinese (Simplified) updated.
    - Czech updated.
    - Danish updated.
    - Dutch updated.
    - French updated.
    - Galician updated.
    - German updated.
    - Gujarati updated.
    - Hindi updated.
    - Hungarian updated.
    - Indonesian updated.
    - Italian updated.
    - Japanese updated.
    - Korean updated.
    - Lithuanian updated.
    - Malagasy updated.
    - Nepali updated.
    - Portuguese updated.
    - Punjabi updated.
    - Romanian updated.
    - Russian updated.
    - Slovak updated.
    - Spanish updated.
    - Swedish updated.
    - Tagalog updated.
    - Thai updated.
    - Ukrainian updated.
    - Vietnamese updated (Closes: #398702).
    - Wolof updated.
    - Updated Khmer.

  [ Translations of debconf templates ]
    - Malagasy updated.
    - Indonesian updated

  [ Translations of program messages ]
    - Indonesian updated.
    - Korean updated.

  [ Gustavo Franco ]
  * Add xfce-desktop task.

  [ Joey Hess ]
  * Updated chinese-s and chinese-s-desktop thanks to Ming Hua.
    Closes: #393630